packages/swc-plugin-workflow/transform/tests/errors/non-async-functions/output-workflow.js
/**__internal_workflows{"workflows":{"input.js":{"validWorkflow":{"workflowId":"workflow//./input//validWorkflow"}}},"steps":{"input.js":{"validStep":{"stepId":"step//./input//validStep"}}}}*/;
// Error: sync function with use step
export function syncStep() {
    'use step';
    return 42;
}
// Error: sync arrow function with use workflow
export const syncWorkflow = ()=>{
    'use workflow';
    return 'test';
};
// These are ok
export var validStep = globalThis[Symbol.for("WORKFLOW_USE_STEP")]("step//./input//validStep");
export const validWorkflow = async ()=>{
    return 'test';
};
validWorkflow.workflowId = "workflow//./input//validWorkflow";
globalThis.__private_workflows.set("workflow//./input//validWorkflow", validWorkflow);
